docs/style.css
html, body {
	margin: 0%;
	padding: 0%;
    overflow-x: hidden;
    overflow: visible;
	background: #000000;
	color: #F5F5F7;
	font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
}
body .row {
	margin-left: 0;
	margin-right: 0;
}
h1#page-title {
	font-family: FenwayPark;
}
h1#page-title a.blog-logo {
	background: url(Assets/RocketSim-logo.svg) no-repeat left;
    display: block;
    text-indent: -9999px;
    background-size: contain;
    margin-bottom: 1rem;
}
a {
	color:  white;
}
.header-container {
	padding-left: 0;
    padding-right: 0;
    margin-top: 6rem;
    margin-bottom: 0rem;
    padding-bottom: 0;
}
.header-container h2 {
	font-size: 2rem;
}
.header-container img {
	max-width: 250px;
    margin: 0 auto;
    display: block;
}
.header-container a img {
	margin: 0;
}
.header-menu {
	padding-bottom: 0;
	margin-bottom: 4rem;
	top: -1px;
}
.header-menu .container {
	padding-right: 0;
	padding-left: 0;
}
.is-pinned {
	border-bottom: 1px rgba(255,255,255,0.24) solid;
}
.is-pinned #sticky-app-icon {
	opacity: 1 !important;
}
.header-menu #sticky-app-icon {
	width: 100%;
	max-width: 44px;
	opacity: 0;
}
.header-menu .row {
	padding: 1rem 0;
	backdrop-filter: saturate(180%) blur(20px);
	background-color: rgba(0,0,0,0.72);
}
.header-menu .team-licenses-button button {
	background: none;
    color: #0093ff;
}
.header-menu .team-licenses-button svg {
    vertical-align: middle!important;
    -webkit-transform: translateY(-1.25px)!important;
    transform: translateY(-1.25px)!important;
    color: #0093ff;
    fill: #0093ff;
}
.header-menu button {
	float: left;
	background-color: #0093ff;
    border: none;
    border-radius: 20px;
    padding: 0.575rem 1.75rem;
    font-weight: 600;
    margin-top: 0;
    margin-right: 20px;
}
.section-headline {
	font-size: 4.5rem;
	line-height: 1.05556;
    font-weight: 600;
    letter-spacing: -.006em;
}
.section-headline-elevated {
	line-height: 1.05556;
    font-weight: 600;
    letter-spacing: -.006em;
}
.typography-section-intro {
	font-size: 1.5rem;
    line-height: 1.33341;
    font-weight: 600;
    letter-spacing: -.003em;
    margin-top: 33px;
}
.text-headline {
	color: white;
}
.gray-text {
	color: #aaa;
}
#trusted-companies img {
	max-width: 640px;
	width: 100%;
}
#trusted-companies h2 {
	text-align: center;
}
#app-store-badges {
	margin-bottom: 4rem;
}
#app-store-badges img {
	max-height: 122px;
	margin: 0 auto;
    display: block;
    margin-top: 2rem;
}
#pro-section {
	background: #111111;
}
.navbar-brand {
	color: #fff!important;
	font-size: 2rem;
	font-weight: 800;
}
.bg-light {
	background-color: transparent!important;
}
.nav-link {
	color: #fff!important;
	padding: 1.5rem;
	letter-spacing: 2px;
	/*    font-weight: 600;*/
}
.navbar-brand {
	color: #fff!important;
	font-size: 2rem;
	font-weight: 600;
	letter-spacing: 4px;
}
.navbar-brand :hover {
	color: black;
}
.navbar-light .navbar-nav .nav-link {
	color: #fff;
	padding: 1.5rem;
}
.display-4 {
	font-size: 4.5rem;
	font-weight: 500;
	line-height: 1.2;
}
.jumbotron {
	background-color: inherit;
}
img#simulator {
	max-width: 188px;
}
img#recording-notification {
	max-width: 240px;
	float: right;
	margin-right: 12px;
}
img#floating-thumbnail {
	max-width: 180px;
}
#simulator-container {
	float: left;
}
#simulator-container .row {
	display: flex;
	align-items: flex-end;
}
.btn-lg {
	padding: .75rem 1.5rem;
	font-size: 1.25rem;
	line-height: 1.5;
	border-radius: .3rem;
	margin-top: 2rem;
	margin-right: 1.5rem;
}
.feature-section {
	margin-top: 8rem;
	margin-bottom: 8rem;
}
.feature-section img {
	width: 75%;
}
#drag-and-drop img {
	width: 100px;
    border-radius: 10px;
}
.video-container {
	width: 100%;
	height: 0px;
	position: relative;
	padding-top: 56.25%;
	margin-bottom: 4rem;
}
video {
	width: 100%;
	height: 100%;
	position: absolute;;
	top: 0;
	left: 0;
	height: auto;
	margin-top: 3rem;
	border-radius: 20px;
}
.section-intro {
	font-size: 2.0rem;
    font-weight: 600;
}
.section-desc {
	padding: 0 10%;
}
.features-icon-left {
	float: right;
	margin-top: 1.5rem;
	min-height: 6rem;
}
.features-details-left {
	text-align: left;
}
.features-icon-right {
	float: left;
	margin-top: 1.5rem;
	min-height: 6rem;
}
.features-details-right {
	text-align: right;
}
.feature-item {
	margin-top: 3.5rem;
}
.fa-4 {
	font-size: 3rem!important;
}
.pro .app-store-button {
	padding: .75rem 0rem;
	font-size: 1.25rem;
	border-radius: .3rem;
	margin-top: 2rem;
	margin-right: 1.5rem;
}
#pro-features {
	margin-top: 1rem;
}
#pro-features h3 {
	font-size: 1rem;
	font-weight: 600;
}
#pro-features figure {
	width: 100%;
    height: 50px;
    background-size: contain;
    background-repeat: no-repeat;
    margin: 2rem 0 15px 0;
}
#pro-features p {
	font-size: 1rem;
	color: #A3A39C;
	font-weight: 600;
}
.watermark-removed-icon {
	background-image: url(Assets/watermark-icon.svg);
}
.touches-icon {
	background-image: url(Assets/touches-icon.svg);	
}
.comparing-icon {
	background-image: url(Assets/comparing-icon.svg);	
}
.app-store-button {
	padding: 0;
    background: none;
    border: none;
}
.parallax-background {
	background: url('parallax%20background.jpg');
	background-size: cover;
}
.overlay {
	padding-top: 5rem;
	padding-bottom: 5rem;
}
.support {
	margin-top: 5rem;
	margin-bottom: 5rem;
}
.support h1 {
	margin-bottom: 2rem;
}
.support a {
	color: white;
    text-decoration: underline;
}
.form-inline {
	margin-top: 2rem;
}
.form-control {
	padding: 1rem;
	margin: 1rem;
	border: 1px solid #333;
}
.btn-light {
	color: #292b2c;
	background-color: #fff;
	border-color: #ccc;
	8f9fa;
	font-size: 1.5rem;
}
.footer {
    padding-top: 1rem;
    padding-bottom: 1rem;
    background: #111111;
    font-size: 13px;
    color: #6e6e73;
}
.footer a {
	color: white;
}
.wow {
	-webkit-animation-delay: 0.4s;
}

/* Recent builds */
#recent-builds img, #grids img, #rulers img {
	width: 100%;
	border-radius: 20px;
}

/* Recording touches */
#recording-touches img {
	width: 100%;
	border-radius: 20px;
}

/* Recording example */
#recording-example video {
	position: relative;
    width: 100%;
    max-width: 500px;
    margin: 0 auto;
    margin-top: 3rem;
}

/* Trimming */
#trimming img {
	width: 100%;
    border-radius: 20px;
}

/* Statusbar Menu */
#statusbar_menu img {
	width: 100%;
    border-radius: 20px;
}

/* Reviews */
#reviews span.author a {
	color: #aaa;
	font-style: italic;
}
#reviews img {
	width: 48px;
	border-radius: 24px;
    float: left;
    margin-right: 1em;
}

#reviews .typography-section-intro {
	font-size: 1.4rem;
}
/* FAQ */
#faq .question {
	padding-top: 25px;
	padding-bottom: 5px;
    margin-bottom: 5px;
    border-radius: 20px;
    cursor: pointer;
}

/* 2688x1242px at 458ppi */
@media only screen 
    and (max-device-width: 600px) {

	.header-container {
		margin-top: 1rem;
	}
	.header-container .row img {
		margin: 0 auto;
	}
	.sticky-top {
		position: relative;
	}
	.is-pinned {
		border-bottom: 0;
	}
	#sticky-app-icon {
		display: none;
	}
	.app-store-button button, .team-licenses-button button {
		display: block;
		float: none;
		margin: 0 auto;
	}
    .section-headline {
    	font-size: 3rem;
    }
	.section-desc {
		padding: 0;
	}
	img#simulator, img#floating-thumbnail {
		width: 50%;
	}
	body {
		font-size: 14px;
	}
	.feature-section {
	    margin-top: 4rem;
	    margin-bottom: 4rem;
	}
	.features-details-right {
		text-align: left;
	}
	.row img {
		margin: 2rem 0;
	}
}

